# enablerdao.com

./: .dev.vars.example  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CLOUDFLARE_DEPLOY_CHECKLIST.txt  Dockerfile  Dockerfile.prebuilt  Dockerfile.spin  LICENSE  QUICK_WINS.md  README.md  STAGING_PRODUCTION.md  TEST_CONTRIBUTION.md  WRANGLER_DEPLOY.sh  eslint.config.mjs  fly-spin.toml  fly-staging.toml  fly.toml  next.config.ts  package-lock.json  package.json  report-2026-02-26-session2.html  report-2026-02-26.html  spin.toml  tsconfig.json  wrangler.toml
.spin/: sqlite_key_value.db
backend-simple/: Cargo.toml
backend-simple/src/: main.rs
contracts/: .gitignore  DOMAIN_SETUP.md  GOVERNANCE.md  hardhat.config.ts  package.json  tsconfig.json
docs/: ANALYTICS_SETUP.md  CLOUDFLARE_QUICKSTART.md  CLOUDFLARE_SETUP_STEP_BY_STEP.md  CONVERSION_REVENUE_STRATEGY.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_SUMMARY.md  DEPLOY_CLOUDFLARE.md  DEPLOY_FLY.md  DEPLOY_NOW.md  GITHUB_ACTIONS_SETUP.md  POST_DEPLOY_CHECKLIST.md  PROJECT_STATUS_REPORT.md  RESEND_SETUP.md
drafts/: 2026-04-10-ai-solo-founder-100man-strategy.md  2026-04-10-local-first-user-owned-economy.md  2026-04-10-rust-fly-sqlite-5dollar-saas.md
frontend/: index.html  install.sh  plan.html
marketing/: 4-WEEK-PLAN.md  hackernews-posts.md  medium-story-ja.md  medium-story.md  producthunt-relaunch.md  reddit-posts.md  social-media-posts.md
public/: install.sh  robots.txt
scripts/: README.md  add_blog_post.py  check-analytics.sh  daily_publish.sh  (+4 more)
spin-component/: Cargo.toml
spin-component/src/: data.rs  email.rs  inquiry_hub.rs  kv.rs  layout.rs  lib.rs  markdown.rs  seo.rs  static_assets.rs
spin-component/src/api/: analytics.rs  fanclub.rs  feedback.rs  ideas.rs  metrics.rs  mod.rs  newsletter.rs  qa.rs
spin-component/src/pages/: agents.rs  blog.rs  careers.rs  dao.rs  fanclub.rs  home.rs  ideas.rs  mod.rs  privacy.rs  projects.rs  safety.rs  simple.rs  token.rs
(+104 files in other folders)
