[package]
name = "enablerdao-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "compression-full", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
bs58 = "0.5"
stripe = { package = "async-stripe", version = "0.39", features = ["runtime-tokio-hyper"] }
hmac = "0.12"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
