[package]
name = "enablerdao-spin"
version = "0.1.0"
edition = "2024"
description = "EnablerDAO website — Fermyon Spin HTTP component"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
